# etac

./: Cargo.toml  README.md  etac-build  etac-test  etac-test-pa5
benchmarks/copy/: conditionals.eta  repeats.eta  uses.eta
benchmarks/dce/: assign.eta  unreachced.eta  unused.eta
benchmarks/inl/: even.eta  inc.eta  square.eta
benchmarks/reg/: acc.eta  euclid.eta  fib.eta
eth/: eth  update
graphviz/: acc.dot  cfg.ipynb  simple.dot  simple2.dot
ir_interpreter/: README.txt  VERSION.txt
runtime/: etafilt
runtime/libeta/: libeta.c
src/: analysis.rs  cfg.rs  copyprop.rs  cost.rs  costs.yaml  dce.rs  eta.pest  eta_irgen.rs  eta_lexer.rs  eta_parser.rs  eta_typechecker.rs  function_analysis.rs  instructions.rs  ir_types.rs  lib.rs  loop_opt.rs  main.rs  regalloc.rs  reorder.rs  rho.pest  rho_irgen.rs  rho_lexer.rs  rho_parser.rs  rho_typechecker.rs  ssa.rs  tiles.rs  translate.rs  translate_types.rs  types.rs
src/types/: array.rs  array_index.rs  array_literal.rs  assignment.rs  declaration.rs  expr.rs  file.rs  function.rs  function_call.rs  if_stmt.rs  interface.rs  interface_function.rs  l_value.rs  literal.rs  primary.rs  procedure_call.rs  program.rs  record.rs  record_field.rs  statement.rs  var_type.rs  while_stmt.rs
temp/: basic.eta  basic.ir  ex01.eta  example.irsol
tests/: integration_test.rs
tests/lexical_analysis_harness/: ex2.lexed  insertionsort.eta
tests/pa2_tests/: assign01.eta  assign01.parsedsol  assign02.eta  assign02.parsedsol  block01.eta  block01.parsedsol  block02.eta  block02.parsedsol  compilers.eti  compilers.parsed  expr07.eta  (+28 more)
(+195 files in other folders)
